--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "files": [
     "generators"
   ],
-  "main": "generators/index.js",
+  "main": "generators/app/index.js",
   "keywords": [
     "yeoman-generator",
     "cake-build",
@@ -52,7 +52,6 @@
   },
   "repository": "frozenskys/generator-cake",
   "scripts": {
-    "prepublish": "gulp prepublish",
     "test": "gulp"
   },
   "license": "MIT",
