use nvm to update node version to latest

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,8 @@ language: csharp
 mono: none
 dotnet: 1.0.0-preview2-003131
 env: DOTNETCORE=1
-node_js:
-  - v6
-  - v5
 install:
+  - nvm install node
   - npm install
 script:
   - gulp
